--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -44,6 +44,7 @@
 <body style="text-align: center">
   <section>
     <div id="title"><p id="balls" style="font-size: 15pt">2d collisions</p><br/></div>
+    <div><p id="balls" style="font-size: 12pt">Click on sim to run/pause</p><br/></div>
   </section>
 
   <div>
