--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>2d collision</title>
-  <link rel="shortcut icon" href="favicon.ico"/>
+  <link rel="stylesheet" href="../bower_components/chartist/dist/chartist.min.css">
   <style>
 
   body {
@@ -39,6 +39,14 @@
   	color: gray;
   }
 
+  .canvas {
+  }
+
+  .chart {
+      height: 200px;
+      width: 600px;
+  }
+
   </style>
 </head>
 <body style="text-align: center">
@@ -47,17 +55,29 @@
     <div><p id="balls" style="font-size: 12pt">Click on sim to run/pause</p><br/></div>
   </section>
 
-  <div>
-    <canvas id="myCanvas" width="600" height="600" style="border:1px solid black;"></canvas>
+  <div class="sim" id="sim1">
+    <button id="reset1" class="reset"> Reset</button>
+    <div class="ct-chart ct-golden-section chart" id="chart1"></div>
+    <canvas class="canvas" id="canvas1" width="800px" height="400px" id="myCanvas" style="border:1px solid black;"></canvas>
   </div>
   
-  <div>
-    <canvas id="myCanvas2" width="600" height="600" style="border:1px solid black;"></canvas>
+  <div class="sim" id="sim2">
+    <button id="reset2" class="reset"> Reset</button>
+    <div class="ct-chart ct-golden-section chart" id="chart2"></div>
+    <canvas class="canvas" id="canvas2" width="800px" height="400px" style="border:1px solid black;"></canvas>
   </div>
 
+  <div class="sim" id="sim3">
+    <button id="reset3" class="reset"> Reset</button>
+    <div class="ct-chart ct-golden-section chart" id="chart3"></div>
+    <canvas class="canvas" id="canvas3" width="800px" height="400px" style="border:1px solid black;"></canvas>
+  </div>
   <!--Place these scripts at end-->
+  <script src="../bower_components/chartist/dist/chartist.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="ball.js"></script>
   <script src="physics.js"></script>
   <script src="simulation.js"></script>
+
 </body>
 </html>
