--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -7,7 +7,7 @@
   <style>
 
   body {
-    background-color: khaki;
+    background-color: rgb(252, 255, 255);
     text-align: center;
     font-family: Ubuntu Mono;
   }
@@ -47,34 +47,62 @@
       width: 600px;
   }
 
+  .flex-container {
+    display: flex;
+    flex-direction: row;
+  }
+
   </style>
 </head>
 <body style="text-align: center">
   <section>
-    <div id="title"><p id="balls" style="font-size: 15pt">2d collisions</p><br/></div>
+    <div id="title"><p id="balls" style="font-size: 15pt">Covid19 Simulator</p><br/></div>
     <div><p id="balls" style="font-size: 12pt">Click on sim to run/pause</p><br/></div>
   </section>
 
-  <div class="sim" id="sim1">
-    <button id="reset1" class="reset"> Reset</button>
+  <div class="sim flex-container" id="sim1">
     <div class="ct-chart ct-golden-section chart" id="chart1"></div>
-    <canvas class="canvas" id="canvas1" width="800px" height="400px" id="myCanvas" style="border:1px solid black;"></canvas>
+    <div>
+      <canvas onclick="pause()" class="canvas" id="canvas1" width="800px" height="400px" id="myCanvas" style="border:1px solid black;"></canvas>
+    </div>
+    <div >
+      <button onclick="reset()"> Reset</button>
+      <p>Social Distancing Compliance</p>
+      <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
+      <p>Infection Rate</p>
+      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.8" step="0.01" min="0" max="1">
+    </div>
   </div>
   
-  <div class="sim" id="sim2">
-    <button id="reset2" class="reset"> Reset</button>
+  <div class="sim flex-container" id="sim2">
     <div class="ct-chart ct-golden-section chart" id="chart2"></div>
-    <canvas class="canvas" id="canvas2" width="800px" height="400px" style="border:1px solid black;"></canvas>
+    <div>
+      <canvas onclick="pause()" class="canvas" id="canvas2" width="800px" height="400px" style="border:1px solid black;"></canvas>
+    </div>
+    <div>
+      <p>Social Distancing Compliance</p>
+      <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
+      <p>Infection Rate</p>
+      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.25" step="0.01" min="0" max="1">
+      <button onclick="reset()"> Reset</button>
+    </div>
   </div>
 
-  <div class="sim" id="sim3">
-    <button id="reset3" class="reset"> Reset</button>
+  <div class="sim flex-container" id="sim3">
     <div class="ct-chart ct-golden-section chart" id="chart3"></div>
-    <canvas class="canvas" id="canvas3" width="800px" height="400px" style="border:1px solid black;"></canvas>
+    <div>
+      <canvas onclick="pause()" class="canvas" id="canvas3" width="800px" height="400px" style="border:1px solid black;"></canvas>
+    </div>
+    <div>
+      <button onclick="reset()"> Reset</button>
+      <p>Social Distancing Compliance</p>
+      <input class="sd" onchange="updateSocialDistance()" type="number" value="0.8" step="0.01" min="0" max="1">
+      <p>Infection Rate</p>
+      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.8" step="0.01" min="0" max="1">
+    </div>
   </div>
   <!--Place these scripts at end-->
   <script src="../bower_components/chartist/dist/chartist.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="ball.js"></script>
   <script src="physics.js"></script>
   <script src="simulation.js"></script>
