--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -39,9 +39,6 @@
   	color: gray;
   }
 
-  .canvas {
-  }
-
   .chart {
       height: 200px;
       width: 600px;
@@ -60,34 +57,42 @@
     <div><p id="balls" style="font-size: 12pt">Click on sim to run/pause</p><br/></div>
   </section>
 
+  <!--This div outlines a simulation object. You can place as many of these in html as you like.
+      Each sim must have a unique id, and each chart and canvas element must have a unique id.-->
   <div class="sim flex-container" id="sim1">
     <div class="ct-chart ct-golden-section chart" id="chart1"></div>
     <div>
-      <canvas onclick="pause()" class="canvas" id="canvas1" width="800px" height="400px" id="myCanvas" style="border:1px solid black;"></canvas>
+      <canvas onclick="pause()" class="canvas" id="canvas1" width="800px" height="400px" style="border:1px solid black;"></canvas>
     </div>
-    <div >
+    <div>
       <button onclick="reset()"> Reset</button>
       <p>Social Distancing Compliance</p>
       <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
       <p>Infection Rate</p>
       <input class="ir" onchange="updateInfectionRate()" type="number" value="0.8" step="0.01" min="0" max="1">
+      <p>Symptomatic Rate</p>
+      <input class="sym" onchange="updateSymptomatic()" type="number" value="0.7" step="0.01" min="0" max="1">
     </div>
   </div>
-  
+
+  <!--Second sim-->
   <div class="sim flex-container" id="sim2">
     <div class="ct-chart ct-golden-section chart" id="chart2"></div>
     <div>
       <canvas onclick="pause()" class="canvas" id="canvas2" width="800px" height="400px" style="border:1px solid black;"></canvas>
     </div>
     <div>
+      <button onclick="reset()"> Reset</button>
       <p>Social Distancing Compliance</p>
       <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
       <p>Infection Rate</p>
       <input class="ir" onchange="updateInfectionRate()" type="number" value="0.25" step="0.01" min="0" max="1">
-      <button onclick="reset()"> Reset</button>
+      <p>Symptomatic Rate</p>
+      <input class="sym" onchange="updateSymptomatic()" type="number" value="0.7" step="0.01" min="0" max="1">
     </div>
   </div>
 
+  <!--Third Sim-->
   <div class="sim flex-container" id="sim3">
     <div class="ct-chart ct-golden-section chart" id="chart3"></div>
     <div>
@@ -99,8 +104,12 @@
       <input class="sd" onchange="updateSocialDistance()" type="number" value="0.8" step="0.01" min="0" max="1">
       <p>Infection Rate</p>
       <input class="ir" onchange="updateInfectionRate()" type="number" value="0.8" step="0.01" min="0" max="1">
+      <p>Symptomatic Rate</p>
+      <input class="sym" onchange="updateSymptomatic()" type="number" value="0.7" step="0.01" min="0" max="1">
     </div>
   </div>
+
+
   <!--Place these scripts at end-->
   <script src="../bower_components/chartist/dist/chartist.min.js"></script>
   <script src="ball.js"></script>
