made line colors match ball colors

--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -49,6 +49,21 @@
     flex-direction: row;
   }
 
+  .ct-series-a .ct-line,
+  .ct-series-a .ct-point {
+    stroke: lightblue;
+  }
+
+  .ct-series-b .ct-line,
+  .ct-series-b .ct-point {
+    stroke: orange;
+  }
+
+  .ct-series-c .ct-line,
+  .ct-series-c .ct-point {
+    stroke: grey;
+  }
+
   </style>
 </head>
 <body style="text-align: center">
