box branch will experiment

--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -77,7 +77,7 @@
   <div class="sim flex-container" id="sim1">
     <div class="ct-chart ct-golden-section chart" id="chart1"></div>
     <div>
-      <canvas onclick="pause()" class="canvas" id="canvas1" width="800px" height="400px" style="border:1px solid black;"></canvas>
+      <canvas onclick="pause()" class="canvas" id="canvas1" width="800px" height="500px" style="border:1px solid black;"></canvas>
     </div>
     <div>
       <button onclick="reset()"> Reset</button>
@@ -94,7 +94,7 @@
   <div class="sim flex-container" id="sim2">
     <div class="ct-chart ct-golden-section chart" id="chart2"></div>
     <div>
-      <canvas onclick="pause()" class="canvas" id="canvas2" width="800px" height="400px" style="border:1px solid black;"></canvas>
+      <canvas onclick="pause()" class="canvas" id="canvas2" width="800px" height="500px" style="border:1px solid black;"></canvas>
     </div>
     <div>
       <button onclick="reset()"> Reset</button>
@@ -111,7 +111,7 @@
   <div class="sim flex-container" id="sim3">
     <div class="ct-chart ct-golden-section chart" id="chart3"></div>
     <div>
-      <canvas onclick="pause()" class="canvas" id="canvas3" width="800px" height="400px" style="border:1px solid black;"></canvas>
+      <canvas onclick="pause()" class="canvas" id="canvas3" width="800px" height="500px" style="border:1px solid black;"></canvas>
     </div>
     <div>
       <button onclick="reset()"> Reset</button>
@@ -128,8 +128,7 @@
   <!--Place these scripts at end-->
   <script src="../bower_components/chartist/dist/chartist.min.js"></script>
   <script src="ball.js"></script>
-  <script src="physics.js"></script>
+  <script src="box.js"></script>
   <script src="simulation.js"></script>
-
 </body>
 </html>
