--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -84,9 +84,9 @@
       <p>Social Distancing Compliance</p>
       <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
       <p>Infection Rate</p>
-      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.8" step="0.01" min="0" max="1">
+      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
       <p>Symptomatic Rate</p>
-      <input class="sym" onchange="updateSymptomatic()" type="number" value="0.7" step="0.01" min="0" max="1">
+      <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
     </div>
   </div>
 
@@ -101,13 +101,12 @@
       <p>Social Distancing Compliance</p>
       <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
       <p>Infection Rate</p>
-      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.25" step="0.01" min="0" max="1">
+      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.35" step="0.01" min="0" max="1">
       <p>Symptomatic Rate</p>
-      <input class="sym" onchange="updateSymptomatic()" type="number" value="0.7" step="0.01" min="0" max="1">
+      <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
     </div>
   </div>
-
-  <!--Third Sim-->
+  <!--Third sim-->
   <div class="sim flex-container" id="sim3">
     <div class="ct-chart ct-golden-section chart" id="chart3"></div>
     <div>
@@ -118,11 +117,27 @@
       <p>Social Distancing Compliance</p>
       <input class="sd" onchange="updateSocialDistance()" type="number" value="0.8" step="0.01" min="0" max="1">
       <p>Infection Rate</p>
-      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.8" step="0.01" min="0" max="1">
+      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
       <p>Symptomatic Rate</p>
-      <input class="sym" onchange="updateSymptomatic()" type="number" value="0.7" step="0.01" min="0" max="1">
+      <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
     </div>
   </div>
+    <!--Third sim-->
+    <div class="sim flex-container" id="sim4">
+      <div class="ct-chart ct-golden-section chart" id="chart4"></div>
+      <div>
+        <canvas onclick="pause()" class="canvas" id="canvas4" width="800px" height="500px" style="border:1px solid black;"></canvas>
+      </div>
+      <div>
+        <button onclick="reset()"> Reset</button>
+        <p>Social Distancing Compliance</p>
+        <input class="sd" onchange="updateSocialDistance()" type="number" value="0.0" step="0.01" min="0" max="1">
+        <p>Infection Rate</p>
+        <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
+        <p>Symptomatic Rate</p>
+        <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
+      </div>
+    </div>
 
 
   <!--Place these scripts at end-->
