--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -61,7 +61,7 @@
 
   .ct-series-c .ct-line,
   .ct-series-c .ct-point {
-    stroke: grey;
+    stroke: green;
   }
 
   </style>
@@ -90,39 +90,7 @@
     </div>
   </div>
 
-  <!--Second sim-->
-  <div class="sim flex-container" id="sim2">
-    <div class="ct-chart ct-golden-section chart" id="chart2"></div>
-    <div>
-      <canvas onclick="pause()" class="canvas" id="canvas2" width="800px" height="500px" style="border:1px solid black;"></canvas>
-    </div>
-    <div>
-      <button onclick="reset()"> Reset</button>
-      <p>Social Distancing Compliance</p>
-      <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
-      <p>Infection Rate</p>
-      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.35" step="0.01" min="0" max="1">
-      <p>Symptomatic Rate</p>
-      <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
-    </div>
-  </div>
-  <!--Third sim-->
-  <div class="sim flex-container" id="sim3">
-    <div class="ct-chart ct-golden-section chart" id="chart3"></div>
-    <div>
-      <canvas onclick="pause()" class="canvas" id="canvas3" width="800px" height="500px" style="border:1px solid black;"></canvas>
-    </div>
-    <div>
-      <button onclick="reset()"> Reset</button>
-      <p>Social Distancing Compliance</p>
-      <input class="sd" onchange="updateSocialDistance()" type="number" value="0.8" step="0.01" min="0" max="1">
-      <p>Infection Rate</p>
-      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
-      <p>Symptomatic Rate</p>
-      <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
-    </div>
-  </div>
-    <!--Third sim-->
+    <!--Second sim-->
     <div class="sim flex-container" id="sim4">
       <div class="ct-chart ct-golden-section chart" id="chart4"></div>
       <div>
