--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2d collision</title>
+  <title>Covid19 Simulator</title>
   <link rel="stylesheet" href="../bower_components/chartist/dist/chartist.min.css">
   <style>
 
@@ -64,6 +64,11 @@
     stroke: green;
   }
 
+  .ct-series-d .ct-line,
+  .ct-series-d .ct-point {
+    stroke: black;
+  }
+
   </style>
 </head>
 <body style="text-align: center">
@@ -85,8 +90,9 @@
       <input class="sd" onchange="updateSocialDistance()" type="number" value="0" step="0.01" min="0" max="1">
       <p>Infection Rate</p>
       <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
-      <p>Symptomatic Rate</p>
+      <!--<p>Symptomatic Rate</p>
       <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
+      -->
     </div>
   </div>
 
@@ -102,8 +108,9 @@
         <input class="sd" onchange="updateSocialDistance()" type="number" value="0.0" step="0.01" min="0" max="1">
         <p>Infection Rate</p>
         <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
-        <p>Symptomatic Rate</p>
+        <!--<p>Symptomatic Rate</p>
         <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
+        -->
       </div>
     </div>
 
