implemented market and hospital features

--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -109,7 +109,7 @@
         <p>Infection Rate</p>
         <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
         <!--<p>Symptomatic Rate</p>
-        <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
+        <input class="sym" onchange="updateSymptomaticRate()" type="number" value="1" step="0.01" min="0" max="1">
         -->
       </div>
     </div>
@@ -117,8 +117,8 @@
 
   <!--Place these scripts at end-->
   <script src="../bower_components/chartist/dist/chartist.min.js"></script>
-  <script src="ball.js"></script>
   <script src="box.js"></script>
+  <script src="ball.js"></script>
   <script src="simulation.js"></script>
 </body>
 </html>
