--- a/ballsballsballs/index.html
+++ b/ballsballsballs/index.html
@@ -82,37 +82,53 @@
   <div class="sim flex-container" id="sim1">
     <div class="ct-chart ct-golden-section chart" id="chart1"></div>
     <div>
-      <canvas onclick="pause()" class="canvas" id="canvas1" width="800px" height="500px" style="border:1px solid black;"></canvas>
+      <canvas onclick="pause()" class="canvas" id="canvas1" width="800px" height="600px" style="border:1px solid black;"></canvas>
     </div>
-    <div>
+    <div class="controls">
       <button onclick="reset()"> Reset</button>
-      <p>Social Distancing Compliance</p>
-      <input class="sd" onchange="updateSocialDistance()" type="number" value="0.99" step="0.01" min="0" max="1">
-      <p>Infection Rate</p>
-      <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
-      <!--<p>Symptomatic Rate</p>
-      <input class="sym" onchange="updateSymptomatic()" type="number" value="1" step="0.01" min="0" max="1">
-      -->
+      <button onclick="pause()"> Play/Pause</button>
+      <p>Social Distancing Compliance (0-1) (D)</p>
+      <input class="socialDistanceCompliance" onchange="update()" type="number" value="0.2" step="0.01" min="0" max="1">
+      <p>Infection Rate (0-1) (D)</p>
+      <input class="infectionRate" onchange="update()" type="number" value="0.7" step="0.01" min="0" max="1">
+      <p>Morbidity Rate (0-1) (D) </p>
+      <input class="morbidityRate" onchange="update()" type="number" value="0.03" step="0.001" min="0" max="1">
+      <p>Symptomatic Rate (0-1)</p>
+      <input class="symptomaticRate" onchange="update()" type="number" value="1" step="0.01" min="0" max="1">
+      <p>Symptom Start Time (1+) </p>
+      <input class="symptomStartTime" onchange="update()" type="number" value="50" step="1" min="1" max="1000">
+      <p>Recover Time (1+) </p>
+      <input class="recoverTime" onchange="update()" type="number" value="100" step="1" min="1" max="1000">
+      <p>Number of People (1+)</p>
+      <input class="numStartingBalls" onchange="update()" type="number" value="400" step="1" min="1" max="1000">
+      <p>Initial Num Sick People (1+)</p>
+      <input class="startingSickBalls" onchange="update()" type="number" value="2" step="1" min="1" max="1000">
+      <p>Speed (0+)</p>
+      <input class="ballSpeed" onchange="update()" type="number" value="12" step="1" min="1" max="30">
+      <p>Communities: Number (1+) </p>
+      <input class="numCommunities" onchange="update()" type="number" value="1" step="1" min="1" max="100">
+      <p>Communities: Switch Rate (D) </p>
+      <input class="switchCommunityRate" onchange="update()" type="number" value="0.005" step="0.001" min="0" max="1">
+      <p>Market: Exists (0/1) </p>
+      <input class="hasMarketBox" onchange="update()" type="number" value="0" step="1" min="0" max="1">
+      <p>Market: Shopping Rate (0-1) (D) </p>
+      <input class="marketFrequency" onchange="update()" type="number" value="0.001" step="0.001" min="0" max="1">
+      <p>Market: Shopping Time (1+) (D) </p>
+      <input class="marketDuration" onchange="update()" type="number" value="20" step="1" min="1" max="1000">
+      <p>Hospital: Exists (0/1)</p>
+      <input class="hasHospitalBox" onchange="update()" type="number" value="0" step="1" min="0" max="1">
+      <p>Hospital: Admission Rate (0-1)</p>
+      <input class="hospitalizationRate" onchange="update()" type="number" value="0" step="0.01" min="0" max="1">
+      <p>Test and Trace: Test Symptomatic Rate (0-1)</p>
+      <input class="testAndTraceRate" onchange="update()" type="number" value="0" step="0.01" min="0" max="1">
+      <p>Test and Trace: Recursive Rate (0-1)</p>
+      <input class="testAndTraceInceptionRate" onchange="update()" type="number" value="1" step="0.01" min="0" max="1">
+      <p>Test and Trace: Test Number of Contacts (0-25)</p>
+      <input class="testAndTraceNumContacts" onchange="update()" type="number" value="10" step="1" min="0" max="25">
+      <p>Test and Trace: Quarantine Mode: 0=At Home, 1=In Hospital </p>
+      <input class="testAndTraceQuarantineMode" onchange="update()" type="number" value="0" step="1" min="0" max="1">
     </div>
   </div>
-
-    <!--Second sim-->
-    <div class="sim flex-container" id="sim4">
-      <div class="ct-chart ct-golden-section chart" id="chart4"></div>
-      <div>
-        <canvas onclick="pause()" class="canvas" id="canvas4" width="800px" height="500px" style="border:1px solid black;"></canvas>
-      </div>
-      <div>
-        <button onclick="reset()"> Reset</button>
-        <p>Social Distancing Compliance</p>
-        <input class="sd" onchange="updateSocialDistance()" type="number" value="0.0" step="0.01" min="0" max="1">
-        <p>Infection Rate</p>
-        <input class="ir" onchange="updateInfectionRate()" type="number" value="0.7" step="0.01" min="0" max="1">
-        <!--<p>Symptomatic Rate</p>
-        <input class="sym" onchange="updateSymptomaticRate()" type="number" value="1" step="0.01" min="0" max="1">
-        -->
-      </div>
-    </div>
 
 
   <!--Place these scripts at end-->
