--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
     <div class="controls">
       <button onclick="reset()"> Reset</button>
       <button onclick="pause()"> Play/Pause</button>
-      <p>Social Distancing Compliance (0-1) (D)</p>
+      <p>Social Distancing Compliance (0-1)</p>
       <input class="socialDistanceCompliance" onchange="update()" type="number" value="0.2" step="0.01" min="0" max="1">
-      <p>Infection Rate (0-1) (D)</p>
+      <p>Infection Rate (0-1)</p>
       <input class="infectionRate" onchange="update()" type="number" value="0.7" step="0.01" min="0" max="1">
-      <p>Morbidity Rate (0-1) (D) </p>
+      <p>Morbidity Rate (0-1) </p>
       <input class="morbidityRate" onchange="update()" type="number" value="0.03" step="0.001" min="0" max="1">
       <p>Symptomatic Rate (0-1)</p>
       <input class="symptomaticRate" onchange="update()" type="number" value="1" step="0.01" min="0" max="1">
-      <p>Symptom Start Time (1+) </p>
+      <p>Symptom Start Time (1+)</p>
       <input class="symptomStartTime" onchange="update()" type="number" value="50" step="1" min="1" max="1000">
       <p>Recover Time (1+) </p>
       <input class="recoverTime" onchange="update()" type="number" value="100" step="1" min="1" max="1000">
@@ -107,13 +107,13 @@
       <input class="ballSpeed" onchange="update()" type="number" value="12" step="1" min="1" max="30">
       <p>Communities: Number (1+) </p>
       <input class="numCommunities" onchange="update()" type="number" value="1" step="1" min="1" max="100">
-      <p>Communities: Switch Rate (D) </p>
+      <p>Communities: Switch Rate </p>
       <input class="switchCommunityRate" onchange="update()" type="number" value="0.005" step="0.001" min="0" max="1">
       <p>Market: Exists (0/1) </p>
       <input class="hasMarketBox" onchange="update()" type="number" value="0" step="1" min="0" max="1">
-      <p>Market: Shopping Rate (0-1) (D) </p>
+      <p>Market: Shopping Rate (0-1) </p>
       <input class="marketFrequency" onchange="update()" type="number" value="0.001" step="0.001" min="0" max="1">
-      <p>Market: Shopping Time (1+) (D) </p>
+      <p>Market: Shopping Time (1+) </p>
       <input class="marketDuration" onchange="update()" type="number" value="20" step="1" min="1" max="1000">
       <p>Hospital: Exists (0/1)</p>
       <input class="hasHospitalBox" onchange="update()" type="number" value="0" step="1" min="0" max="1">
@@ -125,7 +125,7 @@
       <input class="testAndTraceInceptionRate" onchange="update()" type="number" value="1" step="0.01" min="0" max="1">
       <p>Test and Trace: Test Number of Contacts (0-25)</p>
       <input class="testAndTraceNumContacts" onchange="update()" type="number" value="10" step="1" min="0" max="25">
-      <p>Test and Trace: Quarantine Mode: 0=At Home, 1=In Hospital </p>
+      <p>Test and Trace: Quarantine Mode: 0=At Home, 1=In Hospital</p>
       <input class="testAndTraceQuarantineMode" onchange="update()" type="number" value="0" step="1" min="0" max="1">
     </div>
   </div>
