canvas fix maybe

--- a/uiTest/index.html
+++ b/uiTest/index.html
@@ -238,7 +238,8 @@
     
     <!--<div class="ct-chart ct-golden-section chart" id="chart1"></div>-->
     <div class= "flex-container2" id="sim1">
-    <div>
+    <div style="float: left;">
+
       <span class="blueDot"></span>&nbsp; Uninfected &emsp;
       <span class="yellowDot"></span>&nbsp; Infected: No Symptoms &emsp;
       <span class="redDot"></span>&nbsp; Infected: Symptoms &emsp;
